// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Select render no child without errors 1`] = `
<Select>
  <div
    className="kd-select"
  >
    <span
      className="kd-select-selector"
      onBlur={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      tabIndex={0}
    >
      <div
        className="kd-select-underline kd-select-size-middle kd-select-wrapper kd-select-single"
      >
        <span
          className="kd-select-selection-search"
        >
          <input
            className="kd-select-selection-search-input"
            onBlur={[Function]}
            onChange={[Function]}
            onFocus={[Function]}
            readOnly={true}
            value=""
          />
        </span>
        <span
          className="kd-select-placeholder"
        >
          请输入需要搜索的内容
        </span>
        <span
          className="kd-select-suffix"
        >
          <span
            className="kd-select-icon-arrow kd-select-icon-arrow-down"
          >
            <Icon
              type="arrow-down"
            >
              <i
                className="kdicon kdicon-arrow-down"
                onClick={[Function]}
                onMouseEnter={[Function]}
                onMouseLeave={[Function]}
                style={Object {}}
              />
            </Icon>
          </span>
        </span>
      </div>
    </span>
  </div>
</Select>
`;

exports[`Select renders correctly 1`] = `
<div
  class="kd-select"
>
  <span
    class="kd-select-selector"
    tabindex="0"
  >
    <div
      class="kd-select-underline kd-select-size-middle kd-select-wrapper kd-select-multiple"
    >
      <span
        class="kd-select-selection-search"
        style="width:4px"
      >
        <input
          class="kd-select-selection-search-input"
          value=""
        />
        <span
          class="kd-select-selection-search-mirror"
        >
           
        </span>
      </span>
      <span
        class="kd-select-placeholder"
      >
        请输入需要搜索的内容
      </span>
      <span
        class="kd-select-suffix"
      >
        <span
          class="kd-select-icon-arrow kd-select-icon-arrow-down"
        >
          <i
            class="kdicon kdicon-arrow-down"
          />
        </span>
      </span>
    </div>
  </span>
</div>
`;

exports[`Select renders correctly 2`] = `
<div
  class="kd-select"
>
  <span
    class="kd-select-selector"
    tabindex="0"
  >
    <div
      class="kd-select-underline kd-select-size-middle kd-select-wrapper kd-select-single"
    >
      <span
        class="kd-select-selection-search"
      >
        <input
          class="kd-select-selection-search-input"
          readonly=""
          value=""
        />
      </span>
      <span
        class="kd-select-placeholder"
      >
        请输入需要搜索的内容
      </span>
      <span
        class="kd-select-suffix"
      >
        <span
          class="kd-select-icon-arrow kd-select-icon-arrow-down"
        >
          <i
            class="kdicon kdicon-arrow-down"
          />
        </span>
      </span>
    </div>
  </span>
</div>
`;

exports[`Select renders correctly 3`] = `
<div
  class="kd-select"
>
  <span
    class="kd-select-selector"
    tabindex="0"
  >
    <div
      class="kd-select-borderless kd-select-size-middle kd-select-wrapper kd-select-single"
    >
      <span
        class="kd-select-selection-search"
      >
        <input
          class="kd-select-selection-search-input"
          readonly=""
          value=""
        />
      </span>
      <span
        class="kd-select-placeholder"
      >
        请输入需要搜索的内容
      </span>
      <span
        class="kd-select-suffix"
      >
        <span
          class="kd-select-icon-arrow kd-select-icon-arrow-down"
        >
          <i
            class="kdicon kdicon-arrow-down"
          />
        </span>
      </span>
    </div>
  </span>
</div>
`;

exports[`Select renders correctly 4`] = `
<div
  class="kd-select"
>
  <span
    class="kd-select-selector"
    tabindex="0"
  >
    <div
      class="kd-select-underline kd-select-size-middle kd-select-wrapper kd-select-single"
    >
      <span
        class="kd-select-selection-search"
      >
        <input
          class="kd-select-selection-search-input"
          readonly=""
          value=""
        />
      </span>
      <span
        class="kd-select-placeholder"
      >
        请输入需要搜索的内容
      </span>
      <span
        class="kd-select-suffix"
      >
        <span
          class="kd-select-icon-arrow kd-select-icon-arrow-down"
        >
          <i
            class="kdicon kdicon-arrow-down"
          />
        </span>
      </span>
    </div>
  </span>
</div>
`;

exports[`Select renders correctly 5`] = `
<div
  class="kd-select"
>
  <span
    class="kd-select-selector"
    tabindex="0"
  >
    <div
      class="kd-select-bordered kd-select-size-middle kd-select-wrapper kd-select-single"
    >
      <span
        class="kd-select-selection-search"
      >
        <input
          class="kd-select-selection-search-input"
          readonly=""
          value=""
        />
      </span>
      <span
        class="kd-select-placeholder"
      >
        请输入需要搜索的内容
      </span>
      <span
        class="kd-select-suffix"
      >
        <span
          class="kd-select-icon-arrow kd-select-icon-arrow-down"
        >
          <i
            class="kdicon kdicon-arrow-down"
          />
        </span>
      </span>
    </div>
  </span>
</div>
`;

exports[`Select renders correctly 6`] = `
<div
  class="kd-select"
>
  <span
    class="kd-select-selector"
    tabindex="0"
  >
    <div
      class="kd-select-underline kd-select-size-large kd-select-wrapper kd-select-single"
    >
      <span
        class="kd-select-selection-search"
      >
        <input
          class="kd-select-selection-search-input"
          readonly=""
          value=""
        />
      </span>
      <span
        class="kd-select-placeholder"
      >
        请输入需要搜索的内容
      </span>
      <span
        class="kd-select-suffix"
      >
        <span
          class="kd-select-icon-arrow kd-select-icon-arrow-down"
        >
          <i
            class="kdicon kdicon-arrow-down"
          />
        </span>
      </span>
    </div>
  </span>
</div>
`;

exports[`Select renders correctly 7`] = `
<div
  class="kd-select"
>
  <span
    class="kd-select-selector"
    tabindex="0"
  >
    <div
      class="kd-select-underline kd-select-size-middle kd-select-wrapper kd-select-single"
    >
      <span
        class="kd-select-selection-search"
      >
        <input
          class="kd-select-selection-search-input"
          readonly=""
          value=""
        />
      </span>
      <span
        class="kd-select-placeholder"
      >
        请输入需要搜索的内容
      </span>
      <span
        class="kd-select-suffix"
      >
        <span
          class="kd-select-icon-arrow kd-select-icon-arrow-down"
        >
          <i
            class="kdicon kdicon-arrow-down"
          />
        </span>
      </span>
    </div>
  </span>
</div>
`;

exports[`Select renders correctly 8`] = `
<div
  class="kd-select"
>
  <span
    class="kd-select-selector"
    tabindex="0"
  >
    <div
      class="kd-select-underline kd-select-size-small kd-select-wrapper kd-select-single"
    >
      <span
        class="kd-select-selection-search"
      >
        <input
          class="kd-select-selection-search-input"
          readonly=""
          value=""
        />
      </span>
      <span
        class="kd-select-placeholder"
      >
        请输入需要搜索的内容
      </span>
      <span
        class="kd-select-suffix"
      >
        <span
          class="kd-select-icon-arrow kd-select-icon-arrow-down"
        >
          <i
            class="kdicon kdicon-arrow-down"
          />
        </span>
      </span>
    </div>
  </span>
</div>
`;
